syntax = "proto3";

package proto;

option go_package = "/shared/proto;proto";

service TransactionService {
    rpc Deposit(DepositRequest) returns (DepositResponse);
    rpc Withdraw(WithdrawRequest) returns (WithdrawResponse);
    rpc Payment(PaymentRequest) returns (PaymentResponse);
}

enum TransactionStatus {
    TRANSACTION_STATUS_UNKNOWN = 0;
    TRANSACTION_STATUS_PENDING = 1;
    TRANSACTION_STATUS_SUCCESS = 2;
    TRANSACTION_STATUS_FAILED  = 3;
}

message DepositRequest {
    int32 to_account_id = 1;
    int32 amount = 2;
}

message WithdrawRequest {
    int32 from_account_id = 1;
    int32 amount = 2;
}

message PaymentRequest {
    int32 from_account_id = 1;
    int32 to_account_id = 2;
    int32 amount = 3;
}

message DepositResponse {
    TransactionStatus status = 1;
}

message WithdrawResponse {
    TransactionStatus status = 1;
}

message PaymentResponse {
    TransactionStatus status = 1;
}